--- a/css/global.css
+++ b/css/global.css
@@ -34,6 +34,7 @@ img {
 }
 
 body {
+    font-family: "Plus Jakarta Sans";
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -45,4 +46,12 @@ main {
 
 h1 {
     margin: 0;
+}
+
+.container {
+    width: 100%;
+    max-width: 111rem;
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
