--- a/css/home.css
+++ b/css/home.css
@@ -163,6 +163,9 @@
     background-color: #030303;
     border-radius: 50%;
     margin-top: 5.6rem;
+    &:hover {
+        background-color: #755cde;
+    }
 }
 
 .footer-main {
