--- a/css/home.css
+++ b/css/home.css
@@ -101,15 +101,19 @@
     padding: 10.4rem 10.3rem 2.4rem 2.4rem;
 }
 
-.graphic h1 {
-    padding: 31rem 12rem 2.4rem 2rem;
-}
-
 .amy-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 13.6rem;
+}
+
+.amy-box .amy-tablet {
+    display: none;
+}
+
+.amy-box .amy-mobile {
+    display: none;
 }
 
 .amy-info {
@@ -190,4 +194,281 @@
     font-size: 1.8rem;
     line-height: 2.8rem;
     color: #fff7f0;
+}
+
+@media (max-width: 76.8rem) {
+    .solution h1 {
+        font-weight: bold;
+        font-size: 4.4rem;
+        line-height: 5.5rem;
+        color: #030303;
+    }
+    .solution p {
+        width: 57.3rem;
+    }
+    .hero-content {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 2.4rem;
+    }
+    .hero-box {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .hero-box:nth-child(1) {
+        background-image: url(../images/tablet/graphic.png);
+        max-width: 33.3rem;
+        height: 36.4rem;
+        grid-column: 1/3;
+        grid-row: 1/3;
+        padding: 31rem 9.9rem 2.4rem 2rem;
+    }
+    .hero-box:nth-child(2) {
+        background-image: url(../images/tablet/uxui.png);
+        width: 15.5rem;
+        height: 18.2rem;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        padding: 12.8rem 4.9rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(3) {
+        background-image: url(../images/tablet/app.png);
+        width: 15.5rem;
+        height: 18.2rem;
+        grid-column: 4/5;
+        grid-row: 1/2;
+        padding: 12.8rem 5.8rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(4) {
+        background-image: url(../images/tablet/photo.png);
+        width: 33.3rem;
+        height: 18.2rem;
+        grid-column: 1/3;
+        grid-row: 3/4;
+        padding: 12.8rem 12.6rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(5) {
+        background-image: url(../images/tablet/illustration.png);
+        width: 33.3rem;
+        height: 15.8rem;
+        grid-column: 3/5;
+        grid-row: 2/3;
+        padding: 10.4rem 14.6rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(6) {
+        background-image: url(../images/tablet/motion.png);
+        width: 33.3rem;
+        height: 18.2rem;
+        grid-column: 3/5;
+        grid-row: 3/4;
+        padding: 12.8rem 8.2rem 2.4rem 2.4rem;
+    }
+    .amy-box {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        column-gap: 6.9rem;
+        margin-top: 12rem;
+    }
+    .amy-box .amy-desktop {
+        display: none;
+    }
+    .amy-box .amy-mobile {
+        display: none;
+    }
+    .amy-box .amy-tablet {
+        display: block;
+    }
+    .amy-info {
+        max-width: 34rem;
+    }
+    .amy-info h3 {
+        font-weight: bold;
+        font-size: 3.2rem;
+        line-height: 4rem;
+        color: #030303;
+        margin-bottom: 2.4rem;
+    }
+    .amy-info p {
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+        color: #7a746e;
+        margin-bottom: 2.4rem;
+    }
+    .footer-main {
+        display: flex;
+        flex-direction: column;
+        background-color: #030303;
+        padding: 5.6rem 7.5rem 6.4rem 7.5rem;
+        margin-top: 8.8rem;
+    }
+    .footer-info {
+        text-align: center;
+        margin-bottom: 2.6rem;
+    }
+    .footer-info h3 {
+        font-weight: bold;
+        font-size: 3.2rem;
+        line-height: 4rem;
+        color: #fff7f0;
+    }
+    .footer-info p {
+        width: 54rem;
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+        color: #fff7f0;
+    }
+}
+
+@media (max-width: 37.5rem) {
+    .btn {
+        padding: 0.8rem 2.8rem;
+        border-radius: 3rem;
+        background-color: black;
+        color: #fff7f0;
+        &:hover {
+            background-color: #755cde;
+        }
+        font-weight: 700;
+        font-size: 1.4rem;
+        line-height: 2.8rem;
+    }
+    .solution h1 {
+        font-weight: bold;
+        font-size: 3.6rem;
+        line-height: 4.5rem;
+        color: #030303;
+    }
+    .solution p {
+        width: 28.5rem;
+    }
+    .hero-content {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2.4rem;
+    }
+    .hero-box {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 1rem;
+    }
+    .hero-box:nth-child(1) {
+        background-image: url(../images/tablet/graphic.png);
+        max-width: 34.3rem;
+        height: 36.4rem;
+        grid-column: 1/3;
+        grid-row: 1/3;
+        padding: 31rem 10.9rem 2.4rem 2rem;
+    }
+    .hero-box:nth-child(2) {
+        background-image: url(../images/tablet/uxui.png);
+        width: 15.9rem;
+        height: 18.2rem;
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding: 12.8rem 5.3rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(3) {
+        background-image: url(../images/tablet/app.png);
+        width: 15.9rem;
+        height: 18.2rem;
+        grid-column: 2/3;
+        grid-row: 3/4;
+        padding: 12.8rem 6.2rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(4) {
+        background-image: url(../images/tablet/photo.png);
+        width: 34.3rem;
+        height: 18.2rem;
+        grid-column: 1/3;
+        grid-row: 5/6;
+        padding: 12.8rem 16.7rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(5) {
+        background-image: url(../images/tablet/illustration.png);
+        width: 34.3rem;
+        height: 15.8rem;
+        grid-column: 1/3;
+        grid-row: 4/5;
+        padding: 10.4rem 15.7rem 2.4rem 2.4rem;
+    }
+    .hero-box:nth-child(6) {
+        background-image: url(../images/tablet/motion.png);
+        width: 34.3rem;
+        height: 18.2rem;
+        grid-column: 1/3;
+        grid-row: 6/7;
+        padding: 12.8rem 9.2rem 2.4rem 2.4rem;
+    }
+    .amy-box .amy-desktop {
+        display: none;
+    }
+    .amy-box .amy-tablet {
+        display: none;
+    }
+    .amy-box .amy-mobile {
+        display: block;
+    }
+    .amy-box {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 4rem;
+    }
+    .amy-info {
+        text-align: center;
+        max-width: 34.3rem;
+    }
+    .amy-info h3 {
+        font-weight: bold;
+        font-size: 2.6rem;
+        line-height: 3.2rem;
+        color: #030303;
+        margin-bottom: 2.4rem;
+    }
+    .amy-info p {
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 2.6rem;
+        color: #7a746e;
+        margin-bottom: 2.4rem;
+    }
+    .btn-light {
+        padding: 0.8rem 2.75rem;
+        border-radius: 3rem;
+        background-color: #eb7565;
+        color: #fff7f0;
+        &:hover {
+            background-color: #f6a560;
+        }
+        font-weight: 700;
+        font-size: 1.4rem;
+        line-height: 2.8rem;
+    }
+    .footer-main {
+        display: flex;
+        flex-direction: column;
+        background-color: #030303;
+        padding: 4.85rem 2.4rem;
+        margin-top: 10rem;
+    }
+    .footer-info {
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+    .footer-info h3 {
+        font-weight: bold;
+        font-size: 2.6rem;
+        line-height: 3.2rem;
+        color: #fff7f0;
+        margin-bottom: 2.4rem;
+    }
+    .footer-info p {
+        max-width: 29.5rem;
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 2.6rem;
+        color: #fff7f0;
+    }
 }
